--- a/css/main.css
+++ b/css/main.css
@@ -1,41 +1,61 @@
-body{
-  margin: 68px auto;
-  width: 78%;
+body {
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+    background-color: #f4f4f4;
 }
-nav ul, footer ul{
-  font-family:'Helvetica',"Arial",'sans-serif';
-  padding: 0px;
-  list-style: none;
-  font-weight: bold;
+
+.header {
+    background-color: #333;
+    color: white;
+    padding: 10px 0;
+    text-align: center;
 }
-nav ul li, footer ul li {
-  display: inline;
-  margin-right: 28px;
+
+.header h1 {
+    margin: 0;
 }
-a:{
-  text-decoration: none;
-  color: #999;
+
+nav ul {
+    list-style-type: none;
+    padding: 0;
 }
-a:hover {
-  text-decoration: underline;
+
+nav ul li {
+    display: inline;
+    margin-right: 20px;
 }
-h1 {
-  font-size: 3em;
-  font-family:'Helvetica',"Arial","sans-serif';
+
+nav ul li a {
+    color: white;
+    text-decoration: none;
 }
-P{
-  font-size: 1.5em;
-  line-height: 1.4em;
-  color: #333;
+
+.content {
+    margin: 20px;
+    text-align: center;
 }
-footer {
-  border-top: 1px solid #d5d5d5;
-  font-size: .8em;
+
+.games {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    margin: 20px;
 }
-ul.posts {
-  margin: 20px auto 40px;
-  font-size: 1.5em;
+
+.game {
+    background-color: white;
+    border: 1px solid #ddd;
+    margin: 10px;
+    padding: 10px;
+    width: 45%;
 }
-ul.posts li{
-  list-style: none;
+
+.game img {
+    max-width: 100%;
+    height: auto;
+}
+
+.description {
+    margin-top: 10px;
 }
