--- a/css/main.css
+++ b/css/main.css
@@ -5,14 +5,14 @@ body {
     background-color: #f4f4f4;
 }
 
-.header {
+.head {
     background-color: #333;
     color: white;
     padding: 10px 0;
     text-align: center;
 }
 
-.header h1 {
+.head h1 {
     margin: 0;
 }
 
@@ -32,7 +32,7 @@ nav ul li a {
     text-decoration: none;
 }
 
-.main-content {
+.content {
     padding: 0 25%; 
 }
 .title {
