--- a/css/arknight.css
+++ b/css/arknight.css
@@ -2,34 +2,33 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    background-color: #f4f4f4;
 }
 
-head {
-    width: 100%;
+.head {
     background-color: #333;
     color: white;
     padding: 10px 0;
     text-align: center;
 }
 
-nav ul {
-    list-style: none;
-    padding: 0;
+.head h1 {
     margin: 0;
-    display: flex;
-    justify-content: center;
+}
+nav ul {
+    list-style-type: none;
+    padding: 0;
+    text-align: center;
 }
 
 nav ul li {
-    margin: 0 15px;
+    display: inline;
+    margin-right: 20px;
 }
 
 nav ul li a {
-    text-decoration: none;
     color: white;
+    text-decoration: none;
 }
 
 .content {
