--- a/css/main.css
+++ b/css/main.css
@@ -12,6 +12,13 @@ body {
     text-align: center;
 }
 
+footer {
+    background-color: #333;
+    color: white;
+    padding: 10px 0;
+    text-align: center;
+}
+
 .head h1 {
     margin: 0;
 }
