--- a/css/arknight.css
+++ b/css/arknight.css
@@ -11,6 +11,12 @@ body {
     padding: 10px 0;
     text-align: center;
 }
+footer {
+    background-color: #333;
+    color: white;
+    padding: 10px 0;
+    text-align: center;
+}
 
 .head h1 {
     margin: 0;
