--- a/css/main.css
+++ b/css/main.css
@@ -13,10 +13,8 @@ body {
 }
 
 footer {
-    background-color: #333;
-    color: white;
-    padding: 10px 0;
-    text-align: center;
+  border-top: 1px solid #d5d5d5;
+  font-size: .8em;
 }
 
 .head h1 {
