--- a/css/arknight.css
+++ b/css/arknight.css
@@ -12,10 +12,8 @@ body {
     text-align: center;
 }
 footer {
-    background-color: #333;
-    color: white;
-    padding: 10px 0;
-    text-align: center;
+  border-top: 1px solid #d5d5d5;
+  font-size: .8em;
 }
 
 .head h1 {
