--- a/css/main.css
+++ b/css/main.css
@@ -17,7 +17,7 @@ footer {
   font-size: .8em;
 }
 footer ul{
-  font-family:'Helvetica',"Arial",'sans-serif';
+  font-family:Arial,sans-serif;
   padding: 0px;
   list-style: none;
   font-weight: bold;
