--- a/css/arknight.css
+++ b/css/arknight.css
@@ -15,6 +15,16 @@ footer {
   border-top: 1px solid #d5d5d5;
   font-size: .8em;
 }
+footer ul{
+  font-family:Arial,sans-serif;
+  padding: 0px;
+  list-style: none;
+  font-weight: bold;
+}
+footer ul li {
+  display: inline;
+  margin-right: 28px;
+}
 
 .head h1 {
     margin: 0;
