--- a/css/arknight.css
+++ b/css/arknight.css
@@ -12,18 +12,19 @@ body {
     text-align: center;
 }
 footer {
-  border-top: 1px solid #d5d5d5;
-  font-size: .8em;
+    background-color: #333;
+    border-top: 1px solid #d5d5d5;
+    font-size: .8em;
 }
 footer ul{
-  font-family:Arial,sans-serif;
-  padding: 0px;
-  list-style: none;
-  font-weight: bold;
+    font-family:Arial,sans-serif;
+    padding: 0 15%;
+    list-style: none;
+    font-weight: bold;
 }
 footer ul li {
-  display: inline;
-  margin-right: 28px;
+    display: inline;
+     margin-right: 28px;
 }
 
 .head h1 {
